# SPDX-License-Identifier: BSD-3-Clause
# See Notices.txt for copyright information
[package]
name = "softfloat-sys"
version = "0.1.3"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "BSD-3-Clause"
description = "Rust bindings for Berkeley SoftFloat 3"
repository = "https://salsa.debian.org/Kazan-team/softfloat-sys"

[build-dependencies]
bindgen = "0.61.0"
cc = "1.0"
cc-version = "0.1.0"
